minor & change dist init to 1e38

--- a/medgeconv/knn_graph/Makefile
+++ b/medgeconv/knn_graph/Makefile
@@ -3,7 +3,7 @@ CXX := g++
 NVCC := nvcc
 PYTHON_BIN_PATH = python
 
-SRCS = cc/kernels/knn_graph_kernels.cc $(wildcard cc/kernels/*.h) $(wildcard cc/ops/*.cc)
+SRCS = cc/kernels/knn_graph_kernels.cc $(wildcard cc/kernels/*.h) $(wildcard cc/ops/*.cc) $(wildcard cc/ops/*.cu)
 GPU_ONLY_TARGET_LIB = python/ops/_knn_graph_ops.cu.o
 TARGET_LIB = python/ops/_knn_graph_ops.so
 
@@ -19,7 +19,7 @@ $(TARGET_LIB): $(SRCS) $(GPU_ONLY_TARGET_LIB)
 	$(CXX) $(CFLAGS) -o $@ $^ ${LDFLAGS}  -D GOOGLE_CUDA=1  -I/usr/local/cuda/targets/x86_64-linux/include -L/usr/local/cuda/targets/x86_64-linux/lib -lcudart
 
 gpu_only: $(GPU_ONLY_TARGET_LIB)
-$(GPU_ONLY_TARGET_LIB): cc/kernels/knn_graph_kernels.cu.cc
+$(GPU_ONLY_TARGET_LIB): cc/kernels/knn_graph_kernels.cu
 	$(NVCC) -std=c++11 -c -o $@ $^  $(TF_CFLAGS) -D GOOGLE_CUDA=1 -x cu -Xcompiler -fPIC -DNDEBUG --expt-relaxed-constexpr
 
 clean:
