--- a/.github/workflows/test_cov.yml
+++ b/.github/workflows/test_cov.yml
@@ -3,8 +3,7 @@ name: MEdgeConv Test Coverage
 on: [push]
 
 jobs:
-  build:
-
+  test-cov:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -28,7 +27,30 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           files: ./coverage.xml
+          env_vars: ${{ matrix.python-version }}
           fail_ci_if_error: true
           path_to_write_report: codecov_report.txt
           verbose: true
 
+  deploy:
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    needs: test-cov
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.6'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install build
+      - name: Build package
+        run: python -m build
+      - name: Publish package
+        uses: pypa/gh-action-pypi-publish@master
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
