--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -5,16 +5,13 @@ on: [push]
 jobs:
   test-cov:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.6'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -27,7 +24,6 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           files: ./coverage.xml
-          env_vars: ${{ matrix.python-version }}
           fail_ci_if_error: true
           path_to_write_report: codecov_report.txt
           verbose: true
