--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -31,6 +31,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test-cov
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - uses: actions/checkout@v2
