--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,25 +3,45 @@ name: MEdgeConv Test Coverage
 on: [push]
 
 jobs:
-  test-cov:
+  test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10"]
 
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.6'
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+          make install
+      - name: Test with pytest
+        run: make test
+
+  test_cov:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.7"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install pytest pytest-cov
           make install
-      - name: Test with pytest and coverage
-        run: |
-          make test-cov
+      - name: Test with pytest-cov
+        run: make test-cov
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
         with:
           files: ./coverage.xml
           fail_ci_if_error: true
@@ -38,7 +58,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.6'
+          python-version: "3.7"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
